[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-gemini-cli"
version = "0.2.0"
description = "Ralph iterative development loop extension for Gemini CLI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "arman1o1" }
]
keywords = ["gemini", "cli", "ai", "development", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
ralph = "ralph_loop.cli:main"
ralph-loop = "ralph_loop.cli:start_loop"
ralph-cancel = "ralph_loop.cli:cancel_loop"

[project.urls]
Homepage = "https://github.com/arman1o1/ralph-gemini-cli"
Documentation = "https://github.com/arman1o1/ralph-gemini-cli#readme"
Repository = "https://github.com/arman1o1/ralph-gemini-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
